Add + update view BoMon,CN